--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    //coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 }
